--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@ title: S &amp; E
                  
             <div class="row">
                 <div class="card">
-                    <img src="/img/php.jpg" alt="PHP logo">
+                    <img src="img/php.jpg" alt="PHP logo">
                 </div>
                 <div class="card">
-                    <img src="/img/sql.jpg" alt="SQL logo">
+                    <img src="img/sql.jpg" alt="SQL logo">
                 </div>
                 <div class="card">
-                    <img src="/img/python.jpg" alt="Python logo">
+                    <img src="img/python.jpg" alt="Python logo">
                 </div>
                 <div class="card">
-                    <img src="/img/js.jpg" alt="JavaScript logo">
+                    <img src="img/js.jpg" alt="JavaScript logo">
                 </div>
                 <div class="card">
-                    <img src="/img/html5.jpg" alt="HTML5 logo">
+                    <img src="img/html5.jpg" alt="HTML5 logo">
                 </div>
                 <div class="card">
-                    <img src="/img/css3.jpg" alt="CSS3 logo">
+                    <img src="img/css3.jpg" alt="CSS3 logo">
                 </div>           
             </div>
         </div>
