--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: S &amp; E
                  
             <div class="row">
                 <div class="card">
-                    <img src="img/php.jpg" alt="PHP logo">
+                    <img src="img/php.JPG" alt="PHP logo">
                 </div>
                 <div class="card">
                     <img src="img/sql.jpg" alt="SQL logo">
