--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@ title: S &amp; E
                     <img src="img/php.JPG" alt="PHP logo">
                 </div>
                 <div class="card">
-                    <img src="img/sql.jpg" alt="SQL logo">
+                    <img src="img/sql.JPG" alt="SQL logo">
                 </div>
                 <div class="card">
-                    <img src="img/python.jpg" alt="Python logo">
+                    <img src="img/python.JPG" alt="Python logo">
                 </div>
                 <div class="card">
-                    <img src="img/js.jpg" alt="JavaScript logo">
+                    <img src="img/js.JPG" alt="JavaScript logo">
                 </div>
                 <div class="card">
-                    <img src="img/html5.jpg" alt="HTML5 logo">
+                    <img src="img/html5.JPG" alt="HTML5 logo">
                 </div>
                 <div class="card">
-                    <img src="img/css3.jpg" alt="CSS3 logo">
+                    <img src="img/css3.JPG" alt="CSS3 logo">
                 </div>           
             </div>
         </div>
