add programming section

--- a/index.html
+++ b/index.html
@@ -55,9 +55,153 @@ title: S &amp; E
             </div>
         </div>
     </section>
+
+    <section id="feature-four" class="feature-black">
+        <div class="container">
+            <h2>Programming Lab</h2><br />       
+
+            <div class="row" id="pro">
+                <div class="col-md-12">
+                    <ul class="nav nav-tabs centered" role="tablist">
+                      <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#php" role="tab">PHP</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#python" role="tab">Python</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#javascript" role="tab">JavaScript</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#other" role="tab">HTML5&CSS3</a>
+                      </li>
+                    </ul>
+
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                      <div class="tab-pane active" id="php" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-10 col-md-offset-1">
+                                <br><br>
+                                <progress class="progress" value="90" max="100">90%</progress>
+                                <h2>90%</h2>
+                               <div class="list-group">
+                                    <a href="https://cms-webdev2.rhcloud.com/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">Multilingual CMS</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">PHP + MySQL + jQuery</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                               <div class="list-group">
+                                    <a href="https://gabby-webdev2.rhcloud.com/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">Gamified Forum</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">PHP + MySQL + Bootstrap</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                               <div class="list-group">
+                                    <a href="http://anne.16mb.com/anne" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">Media Center Website</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">PHP + MySQL + jQuery + Bootstrap</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                               <div class="list-group">
+                                    <a href="http://webdev2.16mb.com/cmsbar/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">CMS & Voting System</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">CodeIgniter + MySQL + jQuery + Bootstrap</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                                <div class="list-group">
+                                    <a href="http://webdev.16mb.com/solomon/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">Ecommerce</h4>
+                                        </div>
+                                        <div class="col-sm-8">                                
+                                            <p class="lead">CodeIgniter + MySQL + jQuery + Bootstrap + Paypal</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                                </div>
+                                <div class="list-group">
+                                    <a href="https://gallop-trywordpress.rhcloud.com/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">WordPress 1</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">WordPress + Bootstrap + _s</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                               <div class="list-group">
+                                    <a href="https://wander-trywordpress.rhcloud.com/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">WordPress 2</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">WordPress + Bootstrap + _s</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                               <div class="list-group">
+                                    <a href="https://hanker-trywordpress.rhcloud.com/" class="list-group-item" target="_blank">
+                                        <div class="col-sm-4">
+                                            <h4 class="list-group-item-heading">WordPress 3</h4>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <p class="lead">WordPress + Bootstrap + _s</p>
+                                        </div>
+                                        <div style="clear:both;"></div>
+                                    </a>
+                               </div>
+                            </div>
+                        </div> 
+                      </div>
+                      <div class="tab-pane" id="python" role="tabpanel">
+                        <br><br>
+                        <progress class="progress" value="60" max="100">60%</progress>
+                        <h2>60%</h2>
+                        <h2>Exploring Django...</h2>
+                      </div>
+                      <div class="tab-pane" id="javascript" role="tabpanel">
+                        <br><br>
+                        <progress class="progress" value="50" max="100">50%</progress>
+                        <h2>50%</h2>
+                        <h2>AngularJs, NodeJs, getting MEAN...</h2>
+                      </div>
+                      <div class="tab-pane" id="other" role="tabpanel">
+                        <br><br>
+                        <progress class="progress" value="75" max="100">75%</progress>
+                        <h2>75%</h2>
+                        <h2>HTML5, CSS3, taking care of frontend...</h2>
+                      </div>
+                    </div>
+                </div>
+            </div>        
+        </div>
+    </section>
     
     
-    <section id="feature-two" class="feature-dark">
+    <section id="feature-two" class="feature-dblue">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
