--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ title: S &amp; E
                                 <br><br>
                                 <progress class="progress" value="90" max="100">90%</progress>
                                 <h2>90%</h2>
+                                <h2>More engaging learning materials for LAMP stack...</h2>
                                <div class="list-group">
                                     <a href="https://cms-webdev2.rhcloud.com/" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
