--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ title: S &amp; E
                                     </a>
                                </div>
                                <div class="list-group">
-                                    <a href="http://webdev2.16mb.com/cmsbar/" class="list-group-item" target="_blank">
+                                    <a href="#" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
                                             <h4 class="list-group-item-heading">CMS & Voting System</h4>
                                         </div>
@@ -131,7 +131,7 @@ title: S &amp; E
                                     </a>
                                </div>
                                 <div class="list-group">
-                                    <a href="http://webdev.16mb.com/solomon/" class="list-group-item" target="_blank">
+                                    <a href="#" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
                                             <h4 class="list-group-item-heading">Ecommerce</h4>
                                         </div>
