--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ title: S &amp; E
                                     </a>
                                </div>
                                <div class="list-group">
-                                    <a href="http://anne.16mb.com/anne" class="list-group-item" target="_blank">
+                                    <a href="#" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
                                             <h4 class="list-group-item-heading">Media Center Website</h4>
                                         </div>
@@ -153,12 +153,12 @@ title: S &amp; E
                                     </a>
                                </div>
                                <div class="list-group">
-                                    <a href="https://wander-trywordpress.rhcloud.com/" class="list-group-item" target="_blank">
+                                    <a href="https://sheba-trywordpress.rhcloud.com/" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
-                                            <h4 class="list-group-item-heading">WordPress 2</h4>
+                                            <h4 class="list-group-item-heading">WordPress Ecommmerce 1</h4>
                                         </div>
                                         <div class="col-sm-8">
-                                            <p class="lead">WordPress + Bootstrap + _s</p>
+                                            <p class="lead">WordPress + WooCommerce + Divi theme</p>
                                         </div>
                                         <div style="clear:both;"></div>
                                     </a>
