--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ title: S &amp; E
                                <div class="list-group">
                                     <a href="https://sheba-trywordpress.rhcloud.com/" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
-                                            <h4 class="list-group-item-heading">WordPress Ecommmerce 1</h4>
+                                            <h4 class="list-group-item-heading">WordPress Ecommerce 1</h4>
                                         </div>
                                         <div class="col-sm-8">
                                             <p class="lead">WordPress + WooCommerce + Divi theme</p>
