--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ title: S &amp; E
                                     </a>
                                </div>
                                 <div class="list-group">
-                                    <a href="#" class="list-group-item" target="_blank">
+                                    <a href="https://mayan-webdev2.rhcloud.com/" class="list-group-item" target="_blank">
                                         <div class="col-sm-4">
-                                            <h4 class="list-group-item-heading">Ecommerce</h4>
+                                            <h4 class="list-group-item-heading">WP Ecommerce 2</h4>
                                         </div>
                                         <div class="col-sm-8">                                
-                                            <p class="lead">CodeIgniter + MySQL + jQuery + Bootstrap + Paypal</p>
+                                            <p class="lead">WordPress + WooCommerce + Divi theme</p>
                                         </div>
                                         <div style="clear:both;"></div>
                                     </a>
